--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <i class="fa-duotone fa-solid fa-bars" id="menuToggle"></i>
-      <a href="/LoginPage.html"><i class="fa-solid fa-circle-user"></i></a>
+      <a href="LoginPage.html"><i class="fa-solid fa-circle-user"></i></a>
       <div id="sidebar" class="sidebar">
         <ul>
           <li><a href="#">Profile</a></li>
