--- a/LoginPage.html
+++ b/LoginPage.html
@@ -19,7 +19,7 @@
                 <input type="password" id="password" required placeholder="Enter Password">
             </div>
             <button type="submit">Login</button>
-            <p>Click here if you don't have accout,<a href="/signup.html">SignUp</a></p>
+            <p>Click here if you don't have accout,<a href="signup.html">SignUp</a></p>
             <p id="error-message" class="error-message"></p>
         </form>
     </div>
