--- a/index.html
+++ b/index.html
@@ -34,13 +34,9 @@
     </header>
     <div class="main-container">
       <div>
-        <h1>Lets Talk With Your Personal AI Chatbot</h1></div>
+        <h1>Hello! I’m here to help. What can I do for you today?</h1></div>
       <div class="chat-container">
         <div class="chat-box" id="chat-box">
-          <div id="chatbot-message">
-            <i class="fa-solid fa-robot"></i>
-            <p>Hello friend! How can I help You?</p>
-          </div>
         </div>
         <div class="input-box">
           <i
