--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <h1>Hello! I’m here to help. What can I do for you today?</h1></div>
       <div class="chat-container">
         <div class="chat-box" id="chat-box">
+          <div id="chatbot-message"> 
+            <i class="fa-solid fa-robot"></i><p class=text-box>
+        </p></div>
         </div>
         <div class="input-box">
           <i
