--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="chat-container">
         <div class="chat-box" id="chat-box">
           <div id="chatbot-message"> 
-            <i class="fa-solid fa-robot"></i><p><pre class=text-box></pre>
+            <i class="fa-solid fa-robot"></i><p class=text-box>
         </p></div>
         </div>
         <div class="input-box">
