added new style and feature

--- a/LoginPage.html
+++ b/LoginPage.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="LoginPage.css">
 </head>
 <body>
+    <header>
+        <i class="fa-duotone fa-solid fa-bars" id="menuToggle"></i>
+        <div class="login-section">
+          <div class="login"><a href="/Project-1/chatbot/LoginPage.html">Log in</a></div>
+          <div class="signup"><a href="/Project-1/chatbot/signup.html">Sign up</a></div>
+        </div>
+        <div id="sidebar" class="sidebar">
+          <ul id="option">
+            <li><a href="#">New Chat</a></li>
+            <li><a href="#">Dashboard</a></li>
+            <li id="history">About</li>
+            <li><a href="#">Setting</a></li>
+          </ul>
+        </div>
+      </header>
     <div class="login-container">
         <h2>Login</h2>
         <form id="loginForm">
