--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Chatbot</title>
+    <title>AI Chatbot</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -13,13 +13,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css">
   </head>
   <body>
     <header>
       <i class="fa-duotone fa-solid fa-bars" id="menuToggle"></i>
       <div class="login-section">
-        <div class="login"><a href="#">Log in</a></div>
-        <div class="signup"><a href="#">Sign up</a></div>
+        <div class="login"><a href="/Project-1/chatbot/LoginPage.html">Log in</a></div>
+        <div class="signup"><a href="/Project-1/chatbot/signup.html">Sign up</a></div>
       </div>
       <div id="sidebar" class="sidebar">
         <ul id="option">
@@ -56,6 +57,7 @@
         <p>&copy; 2025 Powered by Shlok Maurya All rights reserved.</p>
       </div>
     </footer>
-    <script src="script.js" async defer></script>
+    <script src="script.js"  defer></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
   </body>
 </html>
