--- a/signup.html
+++ b/signup.html
@@ -1,37 +1,35 @@
-<?php  
-  include('connection.php');
-?>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up</title>
     <link rel="stylesheet" href="signup.css">
-    <title>Sign Up Form</title>
+    <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer">
 </head>
 <body>
     <div class="container">
-        <h2>Sign Up</h2>
-        <form id="signupForm">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type = "submit" name="r_signup">SignUp</button>
-        </form>
-        <div id="message" class="message"></div>
+        <div class="signin-box">
+            <h2>AI Chatbot</h2>
+            <p>We're just a message away if you need anything</p>
+        </div>
+        <div class="signup-box">
+            <h2>Create Account</h2>
+            <div class="input-box">
+            <input type="text" placeholder="Full Name" id="fullname">
+            <input type="text" placeholder="Username" id="username">
+            <input type="email" id="email" placeholder="Email">
+            <input type="password" id="password" placeholder="Password">
+            <input type="password" placeholder="Confirm password">
+            <button id="sign-up">Sign Up</button>
+            <p class="error-message" id="error-message"></p>
+        </div>
+        </div>
     </div>
-    <script src="script.js"></script>
+  <script src="signup.js"></script> 
 </body>
 </html>
-
 
