--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <header>
       <i class="fa-duotone fa-solid fa-bars" id="menuToggle"></i>
       <div class="login-section">
-        <div class="login"><a href="/Project-1/chatbot/LoginPage.html">Log in</a></div>
-        <div class="signup"><a href="/Project-1/chatbot/signup.html">Sign up</a></div>
+        <div class="login"><a href="LoginPage.html">Log in</a></div>
+        <div class="signup"><a href="signup.html">Sign up</a></div>
       </div>
       <div id="sidebar" class="sidebar">
         <ul id="option">
