editing style of chatbot

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       </div>
       <div id="sidebar" class="sidebar">
         <ul id="option">
-           <li><i class="fa-solid fa-plus"></i><div>New Chat</div></li>
+         
+          <li><i class="fa-solid fa-plus"></i><div><a href="index.html">New Chat</a></div></li>
           <li><i class="fa-solid fa-clock-rotate-left"></i><div>Dashboard</div></li>
           <li><i class="fa-solid fa-gear"></i><div>Settings</div></li>
           <li><i class="fa-solid fa-right-from-bracket"></i><div>Log Out</div></li>
